force-app/main/default/objects/ccrz__E_OrderShipment__c/ccrz__E_OrderShipment__c.object-meta.xml
<CustomObject>
    <description>The ccrz__E_OrderShipment__c object contains basic shipment details for an order.</description>
    <label>CC Order Shipment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Order Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>