force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__BillOfLading__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BillOfLading__c</fullName>
    <description>NOT CURRENTLY USED.</description>
    <label>Bill of lading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>