force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__Order__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Order__c</fullName>
    <description>The order that this is a shipment for.</description>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Order Shipments</relationshipLabel>
    <relationshipName>E_OrderShipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>