force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__OrderShipmentId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderShipmentId__c</fullName>
    <description>Id for external use.</description>
    <externalId>true</externalId>
    <label>Order Shipment Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>