force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__ShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipmentDate__c</fullName>
    <description>The date the shipment was shipped.</description>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>