force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippingMethod__c</fullName>
    <description>Shipping method used.</description>
    <label>Shipping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>