force-app/main/default/objects/ccrz__E_OrderShipment__c/fields/ccrz__TrackingNo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TrackingNo__c</fullName>
    <description>Tracking number for the shipment. This will be passed to the carriers site as the tracking number.</description>
    <label>Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>